# robot_FK_IK

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
